--- a/BallWarrior.csproj
+++ b/BallWarrior.csproj
@@ -242,6 +242,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\BallMove.cs" />
+    <Compile Include="Assets\Scripts\Moster.cs" />
     <Compile Include="Assets\Scripts\ShootControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
