--- a/BallWarrior.csproj
+++ b/BallWarrior.csproj
@@ -248,7 +248,12 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GetChildren.cs" />
     <Compile Include="Assets\Scripts\Monster.cs" />
+    <Compile Include="Assets\Scripts\ReadExcel.cs" />
     <Compile Include="Assets\Scripts\ShootControl.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Resources\Data\BallNum_cost.csv.txt" />
+    <None Include="Assets\Resources\Data\BallScale_cost.csv.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
