--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
-Assets/Scenes/test.unity
-Library/assetDatabase3
-Library/shadercompiler-UnityShaderCompiler.exe0.log
+.vs/
+Library/
+Library
+Packages/
+UnityPackageManager/
